--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,8 @@ body {
   max-width: 1100px;
   margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 14px;
 }
 .nav-button {
@@ -55,11 +57,7 @@ body {
   border-radius: 10px;
   margin: 0 auto;
 }
-.nav1 {
-  max-width: 550px;
-  display: flex;
-  margin: 14px auto;
-}
+ 
 .nav-button-text {
   font-family: "Segoe UI";
   font-style: normal;
@@ -85,24 +83,7 @@ body {
   font-size: 24px;
   color: #262626;
 }
-@media (max-width: 375px) {
-  .nav {
-    flex-direction: column;
-  }
-  .nav1 {
-    display: flex;
-    flex-direction: column;
-  }
-}
-@media (max-width: 716px) {
-  .nav {
-    flex-direction: column;
-  }
-  .nav1 {
-    display: flex;
-    flex-direction: column;
-  }
-}
+ 
 .section2 {
   max-width: 1440px;
   margin: 165px auto;
