--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
   background: #ffffff;
   border-radius: 10px;
 }
- 
+
 .nav-button-text {
   font-family: "Segoe UI";
   font-style: normal;
@@ -82,9 +82,9 @@ body {
   font-size: 24px;
   color: #262626;
 }
- .section2-padding{
-  padding:0 10px;
- }
+.section2-padding {
+  padding: 0 10px;
+}
 .section2 {
   max-width: 1440px;
   margin: 165px auto;
@@ -102,8 +102,8 @@ body {
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
-  padding-left:20px;
-  padding-top:20px;
+  padding-left: 20px;
+  padding-top: 20px;
 }
 .h1-zoom {
   font-family: "Segoe UI";
@@ -111,8 +111,8 @@ body {
   font-weight: 700;
   font-size: 50px;
   display: flex;
-  padding-left:20px;
-  padding-top:20px;
+  padding-left: 20px;
+  padding-top: 20px;
   max-width: 528px;
   margin-bottom: 50px;
   align-items: center;
@@ -124,8 +124,8 @@ body {
   font-weight: 400;
   font-size: 20px;
   max-width: 528px;
-  padding-left:20px;
-  padding-top:20px;
+  padding-left: 20px;
+  padding-top: 20px;
   display: flex;
   align-items: center;
   letter-spacing: 0.02em;
@@ -202,8 +202,7 @@ body {
   border-radius: 30px;
   padding-top: 70px;
   display: flex;
-  gap:50px;
-
+  gap: 50px;
 }
 .section3-flex {
   max-width: 1250px;
@@ -249,7 +248,7 @@ span {
   font-size: 18px;
   text-transform: capitalize;
   color: #262626;
-  margin-top:2px;
+  margin-top: 2px;
 }
 .section3-box-relative {
   width: 350px;
@@ -257,123 +256,123 @@ span {
   border-radius: 30px;
   padding: 50px;
   position: relative;
-  bottom:-60px;
+  bottom: -60px;
 }
-.section3-box-relative .cifri span{
-    color:white;
+.section3-box-relative .cifri span {
+  color: white;
 }
-.section3-flex-main{
+.section3-flex-main {
   display: flex;
   flex-direction: row;
   max-width: 800px;
-  gap:60px;
-  margin-left:50px;
+  gap: 60px;
+  margin-left: 50px;
 }
-.section3-flex-vol1{
-  margin-top:100px;
+.section3-flex-vol1 {
+  margin-top: 100px;
 }
-.section3-flex-vol2{
-    display: flex;
-    flex-direction: column;
-    margin-top:150px;
+.section3-flex-vol2 {
+  display: flex;
+  flex-direction: column;
+  margin-top: 150px;
 }
-.section3-flex-vol2 .section3-box-relative{
+.section3-flex-vol2 .section3-box-relative {
   background-color: white;
 }
-.section3-flex-vol2 .section3-box{
+.section3-flex-vol2 .section3-box {
   background: #f9b800;
 }
-.section3-flex-vol2 .cifri span{
+.section3-flex-vol2 .cifri span {
   color: white;
 }
-.section3-flex-vol2 .section3-box-relative .cifri span{
+.section3-flex-vol2 .section3-box-relative .cifri span {
   color: #f9b800;
 }
-.section3-text{
+.section3-text {
   max-width: 1440px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.golden-text{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 400;
-font-size: 20px;
-letter-spacing: 0.02em;
-color: #F9B800;
-margin-bottom:20px;
+.golden-text {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  letter-spacing: 0.02em;
+  color: #f9b800;
+  margin-bottom: 20px;
 }
-.h1-white-text{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 700;
-font-size: 50px;
-color: #FFFFFF;
-margin-bottom:60px;
+.h1-white-text {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 50px;
+  color: #ffffff;
+  margin-bottom: 60px;
 }
-.white-button{
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 22px 50px 24px;
-width: 350px;
-height: 78px;
-background: #FFFFFF;
-border-radius: 30px;
+.white-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 22px 50px 24px;
+  width: 350px;
+  height: 78px;
+  background: #ffffff;
+  border-radius: 30px;
 }
-.white-button-text{
- font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
+.white-button-text {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
 }
-.section3-box-responsive{
+.section3-box-responsive {
   display: none;
   width: 350px;
   background: #f9b800;
   border-radius: 30px;
   padding: 50px;
 }
-.section3-box-relative-responsive{
+.section3-box-relative-responsive {
   display: none;
   width: 350px;
   background: #f9b800;
   border-radius: 30px;
   padding: 50px;
 }
-.section3-box-responsive-1{
+.section3-box-responsive-1 {
   display: none;
   width: 350px;
   background: #f9b800;
   border-radius: 30px;
   padding: 50px;
 }
-.section3-padding{
-  padding:0 10px;
+.section3-padding {
+  padding: 0 10px;
 }
-@media(max-width:1210px){
+@media (max-width: 1210px) {
   .section3 {
     display: flex;
-    gap:40px;
+    gap: 40px;
     margin: 0 auto;
     flex-direction: column-reverse;
     align-items: center;
-    padding:20px;
+    padding: 20px;
   }
-  .section3-flex-main{
+  .section3-flex-main {
     display: flex;
     flex-direction: column;
     max-width: 800px;
-    gap:60px;
-    margin-left:0;
+    gap: 60px;
+    margin-left: 0;
   }
   .section3-flex {
     max-width: 1250px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    gap:20px;
+    gap: 20px;
   }
   .section3-box-relative {
     width: 350px;
@@ -382,300 +381,298 @@ font-size: 24px;
     padding: 50px;
     position: static;
   }
-  .section3-flex-vol2{
+  .section3-flex-vol2 {
     display: flex;
     flex-direction: column;
-    margin-top:-40px;
-}
-.section3-text{
-  align-items: center;
-  width: 100%;
-}
-.golden-text{
-  text-align: center;
-}
-.h1-white-text{
-  text-align: center;
-}
-.section3-box-responsiv{
-  display: block;
-}
-.section3-box-relative{
-  display: none;
-}
-.section3-box-relative-responsive{
-  display: block;
-  background-color: white;
-}
-.section3-box-responsive-1{
-  display: block;
-}
-}
-@media(max-width:375px){
-  .section3{
-    max-width:360px;
+    margin-top: -40px;
+  }
+  .section3-text {
+    align-items: center;
+    width: 100%;
+  }
+  .golden-text {
+    text-align: center;
+  }
+  .h1-white-text {
+    text-align: center;
+  }
+  .section3-box-responsiv {
+    display: block;
+  }
+  .section3-box-relative {
+    display: none;
+  }
+  .section3-box-relative-responsive {
+    display: block;
+    background-color: white;
+  }
+  .section3-box-responsive-1 {
+    display: block;
   }
 }
-.section4{
-  max-width:1440px;
-  margin:0 auto;
+@media (max-width: 375px) {
+  .section3 {
+    max-width: 360px;
+  }
+}
+.section4 {
+  max-width: 1440px;
+  margin: 0 auto;
   display: flex;
   border-radius: 30px;
   background-color: #fffaeb;
 }
-.section-4box{
-  margin:0 auto;
+.section-4box {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.customers{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 700;
-font-size: 50px;
-margin-bottom:40px;
-color: #262626;
-}
-.eusimda{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-margin-bottom:20px;
-color: #262626;
-}
-.davidson{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-margin-bottom:40px;
-color: #262626;
-}
-.imgs-flat{
-  display: flex;
-  gap:40px;
-}
-.davidson-img{
-  width:50%;
-  height:50%;
-  object-fit: cover;
-}
-.section4-padding{
-  padding: 0 10px;
-}
-@media(max-width:810px){
-  .section4{
-    display: flex;
-    flex-direction: column;
-    padding:20px;
-  }
-  .davidson-img{
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
-
-  }
-  .section-4box{
-    margin: 0 auto;
-  }
-  .customers{
-  text-align: center;
-  font-size: 30px;
-  }
-  .eusimda{
-   text-align: center;
-  font-size: 20px;
-
-  }
-  .davidson{
-    text-align: center;
-  font-size: 18px;
-  }
-  .imgs-flat{
-   margin: 0 auto;
-  }
-}
-.section5{
-  max-width:1440px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top:170px;
-  display: flex;
-  border-radius: 30px;
-  background-color: #fffaeb;
-  padding:15px;
-}
-.section5-box-left{
-  max-width:600px;
-}
-.section5-box-left-nav{
- display: flex;
- align-items: center;
- gap:10px;
- margin-bottom:30px;
-}
-.customers-1{
-  font-family: 'Segoe UI';
+.customers {
+  font-family: "Segoe UI";
   font-style: normal;
   font-weight: 700;
   font-size: 50px;
-  margin-bottom:50px;
+  margin-bottom: 40px;
   color: #262626;
 }
-.section5-box-left-nav-text{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-color: #262626;
+.eusimda {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  margin-bottom: 20px;
+  color: #262626;
 }
-.section5-box-left-nav-1{
+.davidson {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  margin-bottom: 40px;
+  color: #262626;
+}
+.imgs-flat {
   display: flex;
-  gap:20px;
+  gap: 40px;
 }
-.section5-button{
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 22px 50px 24px;
-width: 350px;
-height: 78px;
-background: #F9B800;
-border-radius: 30px;
+.davidson-img {
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
 }
-.online{
-  width:90%;
-  height:80%;
+.section4-padding {
+  padding: 0 10px;
 }
-@media(max-width:900px){
-  .section5{
-    margin:0 auto;
+@media (max-width: 810px) {
+  .section4 {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+  }
+  .davidson-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .section-4box {
+    margin: 0 auto;
+  }
+  .customers {
+    text-align: center;
+    font-size: 30px;
+  }
+  .eusimda {
+    text-align: center;
+    font-size: 20px;
+  }
+  .davidson {
+    text-align: center;
+    font-size: 18px;
+  }
+  .imgs-flat {
+    margin: 0 auto;
+  }
+}
+.section5 {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 170px;
+  display: flex;
+  border-radius: 30px;
+  background-color: #fffaeb;
+  padding: 15px;
+}
+.section5-box-left {
+  max-width: 600px;
+}
+.section5-box-left-nav {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 30px;
+}
+.customers-1 {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 50px;
+  margin-bottom: 50px;
+  color: #262626;
+}
+.section5-box-left-nav-text {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  color: #262626;
+}
+.section5-box-left-nav-1 {
+  display: flex;
+  gap: 20px;
+}
+.section5-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 22px 50px 24px;
+  width: 350px;
+  height: 78px;
+  background: #f9b800;
+  border-radius: 30px;
+}
+.online {
+  width: 90%;
+  height: 80%;
+}
+@media (max-width: 900px) {
+  .section5 {
+    margin: 0 auto;
     display: flex;
     flex-direction: column-reverse;
   }
-  .online{
-    width:50%;
-    height:50%;
+  .online {
+    width: 50%;
+    height: 50%;
     margin-left: auto;
     margin-right: auto;
     display: block;
   }
-  .customers-1{
+  .customers-1 {
     text-align: center;
     font-size: 30px;
   }
-  .section5-box-left{
+  .section5-box-left {
     margin: 0 auto;
   }
 }
-.phaselus{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 700;
-font-size: 60px;
-text-align: center;
-color: #262626;
-margin-bottom: 14px;
+.phaselus {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 60px;
+  text-align: center;
+  color: #262626;
+  margin-bottom: 14px;
 }
-.iaculis{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 400;
-font-size: 30px;
-text-align: center;
-color: #262626;
+.iaculis {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  text-align: center;
+  color: #262626;
 }
-.section6-padding{
-  padding:0 10px;
+.section6-padding {
+  padding: 0 10px;
 }
-.section6{
-  max-width:1440px;
+.section6 {
+  max-width: 1440px;
   margin: 0 auto;
 }
-.section-6box{
-max-width:1440px;
-background: #FFFFFF;
-border-radius: 40px;
-margin-bottom: 10px;
-height: 60px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding:20px;
-margin-top:20px;
+.section-6box {
+  max-width: 1440px;
+  background: #ffffff;
+  border-radius: 40px;
+  margin-bottom: 10px;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  margin-top: 20px;
 }
-.tempus{
-font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-color: #262626;
+.tempus {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  color: #262626;
 }
-.section7-padding{
-  padding:0 10px;
+.section7-padding {
+  padding: 0 10px;
 }
-.section7{
-  max-width:1440px;
+.section7 {
+  max-width: 1440px;
   background: #262626;
-border-radius: 80px;
-padding:40px;
-margin-left: auto;
-margin-right: auto;
-margin-top: 40px;
+  border-radius: 80px;
+  padding: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
 }
-.section7-article{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 700;
-font-size: 40px;
-color: #FFFFFF;
-max-width: 600px;
+.section7-article {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  color: #ffffff;
+  max-width: 600px;
 }
-.section7-text{
+.section7-text {
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid rgba(255, 255, 255, 0.12);
 }
-.section7-whitebutton{
-  display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 22px 50px 24px;
-max-width: 350px;
-max-height: 78px;
-background: #FFFFFF;
-border-radius: 30px;
-}
-.section7-whitebutton p{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-color: #262626;
-}
-.section7-text-footer{
+.section7-whitebutton {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top:53px;
+  padding: 22px 50px 24px;
+  max-width: 350px;
+  max-height: 78px;
+  background: #ffffff;
+  border-radius: 30px;
 }
-.section7-text-footer p{
-  font-family: 'Segoe UI';
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-color: #FFFFFF;
+.section7-whitebutton p {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  color: #262626;
 }
-@media(max-width:985px){
-  .section7-text{
+.section7-text-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 53px;
+}
+.section7-text-footer p {
+  font-family: "Segoe UI";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  color: #ffffff;
+}
+@media (max-width: 985px) {
+  .section7-text {
     display: flex;
     flex-direction: column;
   }
-  .section7-text-footer{
+  .section7-text-footer {
     display: flex;
-   flex-direction: column;
+    flex-direction: column;
   }
 }
